<resources>
    <string name="app_name">Momadu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">M O M A D U</string>
    <string name="nav_header_subtitle">18218035@std.stei.itb.ac.id</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_finance">Finance</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_FAQ">FAQ</string>

    <string name="home_today">Today\'s reminders</string>
    <string name="home_no_today">Nothing scheduled for today!</string>

    <string name="button_save_data">SAVE</string>
    <string name="finance_date">Date</string>
    <string name="finance_hour">Hour</string>
    <string name="finance_name">Amount</string>
    <string name="finance_expense_category_1">Bills</string>
    <string name="finance_expense_category_2">Transportation</string>
    <string name="finance_expense_category_3">Clothes</string>
    <string name="finance_expense_category_4">Calls</string>
    <string name="finance_expense_category_5">Groceries</string>
    <string name="finance_expense_category_6">Eating Out</string>
    <string name="finance_expense_notes">Your Note</string>
    <string name="finance_income_category_1">Deposits</string>
    <string name="finance_income_category_2">Salary</string>
    <string name="finance_income_notes">Your Note</string>
    <string name="note_name">Your Note</string>
    <string name="finance_income_name">Add Income</string>
    <string name="finance_expense_name">Add Expense</string>
</resources>