<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_finance"
            android:icon="@drawable/dollar"
            android:title="@string/menu_finance" />
        <item
            android:id=""
            android:icon="@drawable/settings"
            android:title="@string/menu_setting" />
        <item
            android:id=""
            android:icon="@drawable/question"
            android:title="@string/menu_FAQ" />
        <item
            android:icon="@drawable/info"
            android:title="@string/menu_about" />
    </group>
</menu>