<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <ImageButton
        android:id="@+id/btnAddIncome"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginBottom="32dp"
        android:background="#00FFFFFF"
        android:contentDescription="@android:string/ok"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dvIncome"
        android:layout_width="204dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="Monday, 22 Maret 2021"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtIncomeAmount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="currency"
        android:background="#afafaf"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/finance_name"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icIncomeNotes"
        android:layout_width="20dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/pen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtIncomeAmount" />

    <EditText
        android:id="@+id/txtIncomeNotes"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/finance_expense_notes"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/note_name"
        android:textColor="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icIncomeNotes"
        app:layout_constraintTop_toBottomOf="@id/txtIncomeAmount" />

    <ScrollView
        android:id="@+id/financeIncomeCategoryList"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtIncomeNotes">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ibIncomeCategory1"
                    android:layout_width="80dp"
                    android:layout_height="64dp"
                    android:background="?android:attr/panelBackground"
                    android:contentDescription="@string/finance_income_category_1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/deposit" />

                <ImageButton
                    android:id="@+id/ibIncomeCategory2"
                    android:layout_width="80dp"
                    android:layout_height="64dp"
                    android:background="?android:attr/panelBackground"
                    android:contentDescription="@string/finance_income_category_2"
                    android:scaleType="fitCenter"
                    android:src="@drawable/dollar" />

                <ImageButton
                    android:id="@+id/ibIncomeCategoryAdd"
                    android:layout_width="80dp"
                    android:layout_height="64dp"
                    android:background="?android:attr/panelBackground"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/ic_menu_add" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/finance_income_category_1"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/finance_income_category_2"
                    android:textAlignment="center"
                    android:textSize="17sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>